# pyphenorm

./: README.md  pyproject.toml
src/pyphenorm/afep/: afep.py  semtypes.py
tests/: test_extract_from_json.py
